# PolyBot

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  install.sh
DPP PolyBot/: README.md  build.sh
DPP PolyBot/includes/utils/: sqlite.h
DPP PolyBot/src/: main.cpp
DPP PolyBot/src/commands/: config.cpp  levels.cpp
DPP-PolyBot/includes/framework/: listener.h
DPP-PolyBot/includes/utils/: logger.h  paginator.h
DPP-PolyBot/src/listeners/: channels.cpp  levels.cpp  logs.cpp
DPY PolyBot/: requirements.txt
DPY PolyBot/core/: cls.py  tools.py
DPY PolyBot/modules/: errors.py  fun.py  levels.py  maths.py  moderation.py  music.py  openai.py  setup.py  utility.py
Hikari PolyBot/: main.py  requirements.txt
Hikari PolyBot/core/: bot.py
Hikari PolyBot/games/: chess.py
Hikari PolyBot/plugins/: channels.py  fun.py  levels.py  menus.py  music.py
JDA PolyBot/: .gitignore  build.gradle.kts  settings.gradle.kts
JDA PolyBot/src/main/kotlin/: Global.kt  Main.kt
JDA PolyBot/src/main/kotlin/api/: MinecraftApi.kt  TwitchApi.kt  WeatherApi.kt
JDA PolyBot/src/main/kotlin/events/: Roles.kt
Javacord PolyBot/: README.md  settings.gradle
Javacord PolyBot/src/main/java/api/: AnimeApi.java  WeatherAPI.java
Javacord PolyBot/src/main/java/audio/: LavaplayerAudioSource.java  (+1 more)
Serenity PolyBot/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
Serenity PolyBot/migrations/: 20230410192854_polybot.sql
Serenity PolyBot/src/: main.rs
Serenity PolyBot/src/modules/: mod.rs
Serenity PolyBot/src/modules/config/: announce.rs  logs.rs  mod.rs  newcomer.rs  welcome.rs
Serenity PolyBot/src/modules/moderation/: clear.rs  mod.rs
Serenity PolyBot/src/modules/ranking/: global.rs  mod.rs  perso.rs
Serenity PolyBot/src/modules/search/: mod.rs  twitch.rs  wiki.rs
discord.py/: README.md  bot.py
discord.py/games/: dchess.py  hangman.py  minesweeper.py
discord.py/modules/: channels.py  informations.py  logs.py  misc.py  search.py
hikari-lightbulb/: README.md  wordlist.txt
hikari-lightbulb/core/: cd.py  db.py  funcs.py
hikari-lightbulb/games/: hangman.py
hikari-lightbulb/lavalink/: application.yml
hikari-lightbulb/plugins/: errors.py  infos.py  logs.py  misc.py  moderation.py  search.py
includes/: bot.h  commands.h  database.h  env.h  listeners.h  logger.h  pages.h  paginator.h  request.h  sqlite.h
includes/framework/: command.h
includes/utils/: dotenv.h  request.h  sqlite.h
javacord/: README.md  build.gradle
javacord/src/main/java/: Main.java
jda/: README.md  build.gradle.kts  settings.gradle.kts
jda/src/main/kotlin/: Database.kt  Global.kt  Main.kt
src/: main.cpp
src/commands/: config.cpp  levels.cpp  menu.cpp  moderation.cpp  music.cpp  search.cpp
src/core/: bot.cpp  commands.cpp  database.cpp  env.cpp  pages.cpp  paginator.cpp  request.cpp
src/listeners/: channels.cpp  levels.cpp  logs.cpp  menu.cpp  ready.cpp
(+145 files in other folders)
